# HandPose-ROS2

./: .gitignore  LICENSE  README.md  frames_2025-09-03_17.08.38.gv  requirements.txt  requirements_test.txt
install/: local_setup.sh  setup.sh
install/handpose_interfaces/share/handpose_interfaces/: package.dsv  package.ps1  package.sh  package.xml
install/handpose_interfaces/share/handpose_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_handpose_interfaces__rosidl_generator_cppExport.cmake  (+6 more)
install/handpose_ros/lib/handpose_ros/: handpose_tf_broadcaster  mediapipe_hands_node
install/handpose_ros/share/handpose_ros/: finger_config.json  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/handpose_interfaces/: CMakeLists.txt
src/handpose_interfaces/msg/: HandLandmarks.msg  Hands.msg
src/handpose_ros/: package.xml  setup.cfg  setup.py
src/handpose_ros/config/: params.yaml  rviz_config.rviz
src/handpose_ros/handpose_ros/: algebra_utils.py  handpose_tf_broadcaster.py  handpose_tf_broadcaster_legacy.py  landmark_to_handpose.py  mediapipe_hands_node.py
src/handpose_ros/handpose_ros/config/: finger_config.json
src/handpose_ros/launch/: handpose_launch.py
standalone/scripts/: demo_opencv.py  demo_opengl.py  handpose_lefthand_data1.xlsx  handpose_lefthand_data2.xlsx  handpose_lefthand_data3.xlsx  handpose_lefthand_data4.xlsx  handpose_righthand_data1.xlsx  handpose_righthand_data2.xlsx  handpose_righthand_data3.xlsx  landmark_to_handpose.py  mediapipe_hands.py  realsense_camera.py
(+25 files in other folders)
